--- a/app/views/compare/new.html.slim
+++ b/app/views/compare/new.html.slim
@@ -1,6 +1,6 @@
 h1.text-center What Should I Use?
 
-= form_tag compare_path, method: :post do
+= form_tag root_path, method: :post do
   .row
     .col-sm-3.col-sm-offset-2
       .input-group
