Remove name, homepage and language from list to header

--- a/app/views/compare/show.html.slim
+++ b/app/views/compare/show.html.slim
@@ -1,10 +1,12 @@
 - if @repo1 && @repo2
+
+  .row
+    .col-sm-4.col-sm-offset-2
+      = render 'repo', repo: @repo1
+    .col-sm-4
+      = render 'repo', repo: @repo2
+
   table.table
-    thead
-      tr
-        th.text-right = @repo1.name
-        th.text-center vs
-        th.text-left = @repo2.name
     tbody
       - Repository::ATTRIBUTES.each do |key|
         tr
