Use progress bars to compare values

--- a/app/views/compare/_repo.html.slim
+++ b/app/views/compare/_repo.html.slim
@@ -1,4 +1,4 @@
-.media
+.media.well.well-sm
   .media-left
     = image_tag repo.owner.avatar_url, width: 100, height: 100, class: 'media-object'
   .media-body
