--- a/app/views/compare/show.html.slim
+++ b/app/views/compare/show.html.slim
@@ -1,17 +1,19 @@
 - if @repo1 && @repo2
 
   .row
-    .col-sm-4.col-sm-offset-2
+    .col-sm-6
       = render 'repo', repo: @repo1
-    .col-sm-4
+    .col-sm-6
       = render 'repo', repo: @repo2
 
-  table.table
+  table.table.borderless
     tbody
-      - Repository::ATTRIBUTES.each do |key|
-        tr
-          td.text-right = @repo1.send(key)
-          td.text-center = t(".#{key}")
-          td = @repo2.send(key)
+      = render 'row', left: @repo1.stargazers_count, right: @repo2.stargazers_count, label: t('.stargazers_count')
+
+      = render 'row', left: @repo1.subscribers_count, right: @repo2.subscribers_count, label: t('.subscribers_count')
+
+      = render 'row', left: @repo1.forks_count, right: @repo2.forks_count, label: t('.forks_count')
+
+      = render 'row', left: @repo1.open_issues_count, right: @repo2.open_issues_count, label: t('.open_issues_count')
 - else
   p Repository not found!
