--- a/app/views/compare/_repo.html.slim
+++ b/app/views/compare/_repo.html.slim
@@ -1,7 +1,6 @@
 .media.well.well-sm
   .media-left
-    // TODO: repo.owner is a attribute for repository model
-    // = image_tag repo.owner.avatar_url, width: 100, height: 100, class: 'media-object'
+    = image_tag repo.owner_avatar_url, width: 100, height: 100, class: 'media-object'
   .media-body
     h3.media-heading = repo.name
     p
