--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,9 @@ h1 {
 h2 {
   margin-top: 0;
   font-size: 3.5em;
-  padding-bottom: 1em;
+  padding-bottom: 0.5em;
+}
+
+form {
+  margin-bottom: 9em;
 }
