--- a/app/views/compare/new.html.slim
+++ b/app/views/compare/new.html.slim
@@ -2,17 +2,4 @@ h1.text-center This or That?
 h2.text-center What Should I Use?
 
 .container
-  = form_tag create_compare_path, method: :post do
-    .row
-      .col-sm-4.col-sm-offset-1
-        .input-group.input-group-lg
-          .input-group-addon github.com/
-          = text_field_tag 'repo1', params[:repo1], placeholder: 'plataformatec/devise', class: 'form-control'
-
-      .col-sm-4
-        .input-group.input-group-lg
-          .input-group-addon github.com/
-          = text_field_tag 'repo2', params[:repo2], placeholder: 'thoughtbot/clearance', class: 'form-control'
-
-      .col-sm-2
-        = submit_tag 'Compare', class: 'btn btn-primary btn-lg'
+  = render 'form'
