--- a/app/assets/stylesheets/compare/show.css.scss
+++ b/app/assets/stylesheets/compare/show.css.scss
@@ -1,10 +1,3 @@
-.attribute-label {
-  width: 1%;
-  white-space: nowrap;
-  text-align: center;
-  font-weight: bold;
-}
-
 .attribute-left .progress-bar {
   float: right;
   text-align: right;
@@ -20,6 +13,6 @@
   min-width: 40px;
 }
 
-.table.borderless td {
-  border: none;
+.graph {
+  margin-bottom: 3em;
 }
