--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html lang="#{I18n.locale}"
     meta name='description' content='This or That?'
 
     = stylesheet_link_tag    :application, media: :all, 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Work+Sans:400,200'
     = javascript_include_tag :application, 'data-turbolinks-track' => true
     = csrf_meta_tags
 
